feat: get user by username
