# modules/users/controller/user_controller.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/ArshiyaDev/go-commerce/modules/users/entities"
@@ -43,4 +44,42 @@ func (controller *UserController) Create(ctx *gin.Context) {
 	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(http.StatusOK, webResponse)
 
+}
+
+// GetUserByUsername godoc
+// @Summary Get user by username
+// @Description Retrieve a user by their username
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param email path string true "Email"
+// @Success 200 {object} entities.User
+// @Failure 404 {object} Response
+// @Failure 500 {object} Response
+// @Router /api/v1/users/{email} [get]
+func (controller *UserController) GetUserByUsername(ctx *gin.Context) {
+	email := ctx.Param("email")
+	fmt.Println(email)
+	user, err := controller.userService.GetByUsername(ctx, email)
+	fmt.Println(user, err)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, Response{
+			Code:   http.StatusInternalServerError,
+			Status: "Error",
+		})
+		return
+	}
+
+	if user == nil {
+		ctx.JSON(http.StatusNotFound, Response{
+			Code:   http.StatusNotFound,
+			Status: "User not found",
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, Response{
+		Code:   http.StatusOK,
+		Status: "OK",
+	})
 }
